fixed footer spacing in mobile

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -11,6 +11,7 @@
         --gap: 6.4rem;
 
         @include mobile {
+            --gap: 3.2rem;
             flex-direction: column;
             text-align: center;
         }
